Tutorial for SFML3

--- a/ClothSimulation_VerletIntegration.vcxproj.filters
+++ b/ClothSimulation_VerletIntegration.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ClothSimulation_VerletIntegration.cpp">
+    <ClCompile Include="src\ClothSimulation_VerletIntegration.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
